@startuml
!theme plain
hide circle
title Shuffle to Storage Flow

class QuestionList {
  - allQns: List<Question>
  + addQuestion(question: Question)
  + removeQuestion(question: Question)
  + shuffleQuestions()
  + saveToFile()
  + loadFromFile()
}

class Question {
  - text: String
  - answer: String
  + getText()
  + getAnswer()
}

QuestionList --> Question : Stores "*"

class Database {
  - data: ArrayList<Question>
  + saveData(question: Question, answer: getAnswer)
  + loadData(key: Question): getAnswer
}

QuestionList --> Database : Data Storage "1"

@enduml
